[gd_scene load_steps=7 format=2]

[ext_resource path="res://Title_Screen.gd" type="Script" id=1]
[ext_resource path="res://MENU/CHEESECAKE_UPDATE_3/START_START.png" type="Texture" id=2]
[ext_resource path="res://MAIN_SCREEN.jpg" type="Texture" id=3]
[ext_resource path="res://MENU/CHEESECAKE_UPDATE_3/INSTRUC2.png" type="Texture" id=4]
[ext_resource path="res://MENU/CHEESECAKE_UPDATE_3/INSTRUC3.png" type="Texture" id=5]
[ext_resource path="res://MENU/CHEESECAKE_UPDATE_3/START.png" type="Texture" id=6]

[node name="Title_Screen" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 6.46178, 2.58471 )
scale = Vector2( 0.564066, 0.532085 )
texture = ExtResource( 3 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 499.0
margin_top = 438.0
margin_right = 963.0
margin_bottom = 622.0
size_flags_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 464.0
margin_bottom = 184.0

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 184.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 6 )

[node name="TextureButton" type="TextureButton" parent="MarginContainer/HBoxContainer"]
margin_left = 204.0
margin_right = 404.0
margin_bottom = 184.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/HBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
